about AJAX and JSON, CSRF

--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -13,6 +13,7 @@
             novalidate
             class="needs-validation"
           >
+          <input type="text" name="csrf_token" value="{{.CSRFToken}}">
             <!-- <div class="row">
               <div class="col">
                 <div class="mb-3">
