--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -226,18 +226,16 @@
 
         async function custom(c) {
           const { msg = "", title = "" } = c;
-          const { value: fromValues } = await Swal.fire({
+          const { value: result } = await Swal.fire({
             title: title,
             html: msg,
             backdrop: false,
             focusConfirm: false,
             showCancelButton: true,
             willOpen: () => {
-              const elem = document.getElementById("reservation-dates-modal");
-              const rp = new DateRangePicker(elem, {
-                format: "yyyy-mm-dd",
-                showOnFocus: true,
-              });
+              if (c.willOpen !== undefined) {
+                c.willOpen();
+              }
             },
             preConfirm: () => {
               return [
@@ -246,13 +244,25 @@
               ];
             },
             didOpen: () => {
-              document.getElementById("start").removeAttribute("disabled");
-              document.getElementById("end").removeAttribute("disabled");
+              if (c.didOpen !== undefined) {
+                c.didOpen();
+              }
             },
           });
 
-          if (fromValues) {
-            Swal.fire(JSON.stringify(fromValues));
+          if (result) {
+            if (result.dismiss !== Swal.DismissReason.cancel) {
+              if (result.value !== "") {
+                if (c.callback !== undefined) {
+                  c.callback(result);
+                }
+              } else {
+                c.callback(false);
+              }
+            } else {
+              c.callback(false);
+            }
+            
           }
         }
 
